Fixed 1col/2col views, fix to layout tab breaking on small screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,7 +14,11 @@
   margin: auto;
   }
 }
-
+@media (max-width: 568px) {
+  #breadcrumbsBarCentering h4 {
+    font-size: 1.3rem;
+  }
+}
 #searchbox {
   margin:auto;
 }
